# scss-squish

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: contributing.md  renovate.json5
.github/workflows/: build.yml  codeql.yml
scss_squish/: __main__.py
