[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scss-squish"
description = "A niche little tool for squishing SCSS files together."
authors = [
    { name = "Nuztalgia" },
    { email = "nuztalgia@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["dependencies", "urls", "version"]

[project.scripts]
scss-squish = "scss_squish.__main__:main"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D1"

[tool.setuptools_scm]
local_scheme = "no-local-version"
